# AppFactory-Architecture

./: .gitignore  README.md  langgraph.json  pyproject.toml
agents/: design.md  development.md  infrastructure.md  orchestrator.md  qa.md  research.md  risk-ethics.md  ventures.md
graphs/: github_api.py  infra_task.py  iterative_dev.py  knowledge.py  qa_batch.py  research_gate.py  research_only.py  staging_deploy.py  state.py  tracing.py  workspace.py
mcp-servers/infisical-mcp/: package.json
mcp-servers/infisical-mcp/src/: auth.ts  index.ts  infisical.ts
mcp-servers/langgraph-mcp/: package.json  tsconfig.json
mcp-servers/langgraph-mcp/src/: index.ts  schemas.ts  types.ts
mcp-servers/langgraph-mcp/src/clients/: langfuse.test.ts  langfuse.ts  langgraph.ts  qdrant.ts
mcp-servers/langgraph-mcp/src/tools/: interrupts.ts  knowledge.ts  observability.ts  pipeline.ts
tests/: test_github_api.py  test_infra_task.py  test_iterative_dev.py  test_knowledge.py  test_qa_batch.py  test_research_only.py  test_staging_deploy.py  test_tracing.py  test_workspace.py
