[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "appfactory-graphs"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.3.0",
    "langchain-core>=0.3.0",
    "openai>=1.0.0",
    "qdrant-client>=1.9.0",
    "langfuse>=2.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["graphs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
